# eatool

./: .gitignore  README.md  pyproject.toml
src/eatool/: cli.py  gsuite.py
